--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ label {
     margin-left: 5px;
     text-align: center;
 }
-#jednak-kurwa {
+#art {
     margin-bottom: 50px;
 }
 #final-message {
